feat: basic app logic